# minillm

./: .gitignore  PRD.md  README.md  pyproject.toml
configs/: v0_mvp.yaml  v1_train_infer.yaml  v2_moe.yaml  v3_lora.yaml
docs/: ARCHITECTURE.md  ROADMAP.md
minillm/: __init__.py
minillm/core/: __init__.py  attention.py  config.py  ffn.py  model.py  norm.py  rope.py
minillm/data/: __init__.py  collator.py  dataset.py
minillm/inference/: __init__.py  generate.py
minillm/lora/: __init__.py  adapter.py  layers.py
minillm/moe/: __init__.py  experts.py  losses.py  router.py
minillm/tokenizers/: __init__.py  base.py
minillm/training/: checkpoint.py  optim.py  trainer.py
minillm/utils/: config.py  seed.py
scripts/: generate.py  train.py
scripts/stage_tests/: tiny_overfit.py
tests/: test_import.py  test_model.py
